fix: corregir navegacion y validacion de usuarios