@@ -14,19 +14,34 @@ import org.esperanza.util.PasswordUtil;
 
 public class UsuarioAltaController {
 
-    @FXML private TextField txtUsername;
-    @FXML private PasswordField txtPassword;
-    @FXML private PasswordField txtConfirmar;
-    @FXML private ComboBox<String> cmbRol;
-    @FXML private TextField txtNombre;
-    @FXML private TextField txtApellido;
-    @FXML private TextField txtCorreo;
+    @FXML
+    private TextField txtUsername;
+
+    @FXML
+    private PasswordField txtPassword;
+
+    @FXML
+    private PasswordField txtConfirmar;
+
+    @FXML
+    private ComboBox<String> cmbRol;
+
+    @FXML
+    private TextField txtNombre;
+
+    @FXML
+    private TextField txtApellido;
+
+    @FXML
+    private TextField txtCorreo;
 
     private final UsuarioDao usuarioDao = new UsuarioDao();
 
     @FXML
     private void initialize() {
+
         if (!puedeGestionarUsuarios()) {
+
             txtUsername.setDisable(true);
             txtPassword.setDisable(true);
             txtConfirmar.setDisable(true);
@@ -34,8 +49,10 @@ public class UsuarioAltaController {
             txtApellido.setDisable(true);
             txtCorreo.setDisable(true);
             cmbRol.setDisable(true);
+
             return;
         }
+
         cmbRol.getItems().addAll(
                 "ADMIN",
                 "CAJERO",
@@ -47,8 +64,14 @@ public class UsuarioAltaController {
 
     @FXML
     private void onGuardar(ActionEvent event) {
+
         if (!puedeGestionarUsuarios()) {
-            mostrarError("Solo un administrador con sesión activa puede registrar usuarios.");
+
+            mostrarError(
+                    "Solo un administrador con sesión activa "
+                    + "puede registrar usuarios."
+            );
+
             return;
         }
 
@@ -56,9 +79,16 @@ public class UsuarioAltaController {
             return;
         }
 
-        String username = txtUsername.getText().trim();
+        String username = txtUsername
+                .getText()
+                .trim();
+
+        String correo = txtCorreo
+                .getText()
+                .trim();
 
         if (usuarioDao.existeUsername(username)) {
+
             mostrarAdvertencia(
                     "Usuario duplicado",
                     "El nombre de usuario ya existe."
@@ -72,7 +102,8 @@ public class UsuarioAltaController {
                 txtPassword.getText()
         );
 
-        String rol = cmbRol.getValue()
+        String rol = cmbRol
+                .getValue()
                 .trim()
                 .toUpperCase();
 
@@ -82,24 +113,28 @@ public class UsuarioAltaController {
                 rol,
                 txtNombre.getText().trim(),
                 txtApellido.getText().trim(),
-                txtCorreo.getText().trim()
+                correo
         );
 
         if (guardado) {
+
             Alert alerta = new Alert(
                     Alert.AlertType.INFORMATION
             );
 
             alerta.setTitle("Alta de usuario");
             alerta.setHeaderText(null);
+
             alerta.setContentText(
                     "Usuario registrado correctamente."
             );
 
             alerta.showAndWait();
+
             cerrar();
 
         } else {
+
             mostrarError(
                     "No fue posible registrar el usuario. "
                     + "Revisa la conexión y la base de datos."
@@ -108,7 +143,10 @@ public class UsuarioAltaController {
     }
 
     private boolean puedeGestionarUsuarios() {
-        SesionUsuario sesion = SesionUsuario.getInstancia();
+
+        SesionUsuario sesion =
+                SesionUsuario.getInstancia();
+
         return sesion.haySesionActiva()
                 && sesion.getUsuarioActual().isActivo()
                 && sesion.esAdmin();
@@ -132,13 +170,16 @@ public class UsuarioAltaController {
             return false;
         }
 
-        if (!txtUsername.getText()
+        if (!txtUsername
+                .getText()
                 .trim()
                 .matches("[A-Za-z0-9._-]{4,20}")) {
 
             mostrarAdvertencia(
                     "Usuario inválido",
-                    "Usa de 4 a 20 caracteres: letras, números, punto, guion o guion bajo."
+                    "Usa de 4 a 20 caracteres: "
+                    + "letras, números, punto, "
+                    + "guion o guion bajo."
             );
 
             txtUsername.requestFocus();
@@ -149,14 +190,16 @@ public class UsuarioAltaController {
 
             mostrarAdvertencia(
                     "Contraseña inválida",
-                    "La contraseña debe tener al menos 6 caracteres."
+                    "La contraseña debe tener "
+                    + "al menos 6 caracteres."
             );
 
             txtPassword.requestFocus();
             return false;
         }
 
-        if (!txtPassword.getText()
+        if (!txtPassword
+                .getText()
                 .equals(txtConfirmar.getText())) {
 
             mostrarAdvertencia(
@@ -168,41 +211,56 @@ public class UsuarioAltaController {
             return false;
         }
 
-        if (!txtNombre.getText()
+        if (!txtNombre
+                .getText()
                 .trim()
-                .matches("[A-Za-zÁÉÍÓÚáéíóúÑñ ]{2,40}")) {
+                .matches(
+                        "[A-Za-zÁÉÍÓÚáéíóúÑñ ]{2,40}"
+                )) {
 
             mostrarAdvertencia(
                     "Nombre inválido",
-                    "El nombre solo debe contener letras y espacios."
+                    "El nombre solo debe contener "
+                    + "letras y espacios."
             );
 
             txtNombre.requestFocus();
             return false;
         }
 
-        if (!txtApellido.getText()
+        if (!txtApellido
+                .getText()
                 .trim()
-                .matches("[A-Za-zÁÉÍÓÚáéíóúÑñ ]{2,40}")) {
+                .matches(
+                        "[A-Za-zÁÉÍÓÚáéíóúÑñ ]{2,40}"
+                )) {
 
             mostrarAdvertencia(
                     "Apellido inválido",
-                    "El apellido solo debe contener letras y espacios."
+                    "El apellido solo debe contener "
+                    + "letras y espacios."
             );
 
             txtApellido.requestFocus();
             return false;
         }
 
-        if (!txtCorreo.getText()
-                .trim()
-                .matches(
-                        "^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$"
-                )) {
+        String correo = txtCorreo
+                .getText()
+                .trim();
+
+        if (!validarCorreo(correo)) {
 
             mostrarAdvertencia(
                     "Correo inválido",
-                    "Ingresa un correo electrónico válido."
+                    "Ingresa un correo electrónico válido.\n\n"
+                    + "Ejemplo: usuario@gmail.com\n\n"
+                    + "No se permite:\n"
+                    + "• Punto al inicio o antes del @\n"
+                    + "• Puntos consecutivos\n"
+                    + "• Espacios\n"
+                    + "• Más de un @\n"
+                    + "• Dominio incompleto"
             );
 
             txtCorreo.requestFocus();
@@ -212,26 +270,176 @@ public class UsuarioAltaController {
         return true;
     }
 
-    private boolean vacio(TextField campo) {
-        return campo.getText() == null
-                || campo.getText().trim().isEmpty();
+    private boolean validarCorreo(String correo) {
+
+        if (correo == null
+                || correo.isBlank()) {
+
+            return false;
+        }
+
+        correo = correo.trim();
+
+        /*
+         * No permitir espacios.
+         */
+        if (correo.contains(" ")) {
+            return false;
+        }
+
+        /*
+         * Debe existir solamente un @.
+         */
+        int primerArroba =
+                correo.indexOf('@');
+
+        int ultimoArroba =
+                correo.lastIndexOf('@');
+
+        if (primerArroba <= 0
+                || primerArroba != ultimoArroba) {
+
+            return false;
+        }
+
+        String usuario =
+                correo.substring(
+                        0,
+                        primerArroba
+                );
+
+        String dominio =
+                correo.substring(
+                        primerArroba + 1
+                );
+
+        /*
+         * Validaciones antes del @.
+         */
+        if (usuario.startsWith(".")
+                || usuario.endsWith(".")) {
+
+            return false;
+        }
+
+        if (usuario.contains("..")) {
+            return false;
+        }
+
+        if (!usuario.matches(
+                "[A-Za-z0-9._%+-]+"
+        )) {
+
+            return false;
+        }
+
+        /*
+         * Validaciones después del @.
+         */
+        if (dominio.isBlank()) {
+            return false;
+        }
+
+        if (dominio.startsWith(".")
+                || dominio.endsWith(".")
+                || dominio.contains("..")) {
+
+            return false;
+        }
+
+        /*
+         * Ejemplos permitidos:
+         *
+         * gmail.com
+         * outlook.com
+         * kinal.edu.gt
+         */
+        if (!dominio.matches(
+                "[A-Za-z0-9-]+"
+                + "(\\.[A-Za-z0-9-]+)+"
+        )) {
+
+            return false;
+        }
+
+        String[] partesDominio =
+                dominio.split("\\.");
+
+        /*
+         * Ninguna parte del dominio puede
+         * iniciar o terminar con guion.
+         */
+        for (String parte : partesDominio) {
+
+            if (parte.isBlank()) {
+                return false;
+            }
+
+            if (parte.startsWith("-")
+                    || parte.endsWith("-")) {
+
+                return false;
+            }
+        }
+
+        /*
+         * La extensión debe tener
+         * por lo menos dos letras.
+         *
+         * Ejemplos:
+         * .com
+         * .gt
+         * .edu
+         * .org
+         */
+        String extension =
+                partesDominio[
+                        partesDominio.length - 1
+                ];
+
+        if (!extension.matches(
+                "[A-Za-z]{2,}"
+        )) {
+
+            return false;
+        }
+
+        return true;
     }
 
-    private boolean vacio(PasswordField campo) {
+    private boolean vacio(TextField campo) {
+
         return campo.getText() == null
-                || campo.getText().isEmpty();
+                || campo
+                        .getText()
+                        .trim()
+                        .isEmpty();
+    }
+
+    private boolean vacio(
+            PasswordField campo) {
+
+        return campo.getText() == null
+                || campo
+                        .getText()
+                        .isEmpty();
     }
 
     @FXML
-    private void onCancelar(ActionEvent event) {
+    private void onCancelar(
+            ActionEvent event) {
+
         cerrar();
     }
 
     private void cerrar() {
-        ((Stage) txtUsername
-                .getScene()
-                .getWindow())
-                .close();
+
+        Stage stage =
+                (Stage) txtUsername
+                        .getScene()
+                        .getWindow();
+
+        stage.close();
     }
 
     private void mostrarAdvertencia(
@@ -245,10 +453,12 @@ public class UsuarioAltaController {
         alerta.setTitle(titulo);
         alerta.setHeaderText(null);
         alerta.setContentText(mensaje);
+
         alerta.showAndWait();
     }
 
-    private void mostrarError(String mensaje) {
+    private void mostrarError(
+            String mensaje) {
 
         Alert alerta = new Alert(
                 Alert.AlertType.ERROR
@@ -257,6 +467,7 @@ public class UsuarioAltaController {
         alerta.setTitle("Error");
         alerta.setHeaderText(null);
         alerta.setContentText(mensaje);
+
         alerta.showAndWait();
     }
 }
